refactor + avatar
